force-app/main/default/objects/FunctionRequirements__c/FunctionRequirements__c.object-meta.xml
<CustomObject>
    <label>機能要件</label>
    <nameField>
        <label>機能名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>機能要件</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>