force-app/main/default/objects/FunctionRequirements__c/fields/cntDesignDiagram__c.field-meta.xml
<CustomField>
    <fullName>cntDesignDiagram__c</fullName>
    <label>設計チャート</label>
    <summaryForeignKey>Relation_Requirements2DesignDiagram__c.FunctionRequirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>