force-app/main/default/objects/FunctionRequirements__c/fields/cntDevTicket__c.field-meta.xml
<CustomField>
    <fullName>cntDevTicket__c</fullName>
    <label>開発チケット</label>
    <summaryForeignKey>Relation_Requirements2Dev__c.FunctionRequirements__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>