force-app/main/default/objects/FunctionRequirements__c/fields/cntObjectReq__c.field-meta.xml
<CustomField>
    <fullName>cntObjectReq__c</fullName>
    <label>オブジェクト定義</label>
    <summaryForeignKey>Relation_Requirements2ObjectReq__c.FunctionRequirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>