force-app/main/default/objects/FunctionRequirements__c/fields/cntOperationFlow__c.field-meta.xml
<CustomField>
    <fullName>cntOperationFlow__c</fullName>
    <label>運用フロー</label>
    <summaryForeignKey>Relation_OptFlow2Req__c.functionRequirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>