force-app/main/default/objects/FunctionRequirements__c/fields/cntPermission__c.field-meta.xml
<CustomField>
    <fullName>cntPermission__c</fullName>
    <label>権限定義</label>
    <summaryForeignKey>Relation_Requirements2PermissionReq__c.FunctionRequirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>