force-app/main/default/objects/FunctionRequirements__c/fields/cntPlan__c.field-meta.xml
<CustomField>
    <fullName>cntPlan__c</fullName>
    <label>対応施策</label>
    <summaryForeignKey>Relation_Plan2Requirements__c.FunctionRequirements__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>