force-app/main/default/objects/FunctionRequirements__c/fields/cntReport__c.field-meta.xml
<CustomField>
    <fullName>cntReport__c</fullName>
    <label>レポート定義</label>
    <summaryForeignKey>Relation_Requirements2ReportReq__c.FunctionRequirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>