force-app/main/default/objects/FunctionRequirements__c/fields/cntTestCase__c.field-meta.xml
<CustomField>
    <fullName>cntTestCase__c</fullName>
    <label>テストケース</label>
    <summaryForeignKey>Relation_Requirements2Testcase__c.FunctionRequirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>