force-app/main/default/objects/FunctionRequirements__c/fields/content__c.field-meta.xml
<CustomField>
    <fullName>content__c</fullName>
    <label>要件内容</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>