force-app/main/default/objects/FunctionRequirements__c/fields/departmentOfUse__c.field-meta.xml
<CustomField>
    <fullName>departmentOfUse__c</fullName>
    <label>想定利用部門</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業統括部</fullName>
            </value>
            <value>
                <fullName>テクノロジーソリューション事業本部</fullName>
            </value>
            <value>
                <fullName>IoTソリューション事業本部</fullName>
            </value>
            <value>
                <fullName>システム管理者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>