force-app/main/default/objects/FunctionRequirements__c/fields/importance__c.field-meta.xml
<CustomField>
    <fullName>importance__c</fullName>
    <label>重要度</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>目立った影響はない</fullName>
            </value>
            <value>
                <fullName>事業運営に影響がある</fullName>
            </value>
            <value>
                <fullName>組織の利益に重大な影響がある</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>