force-app/main/default/objects/FunctionRequirements__c/fields/importanceFlag__c.field-meta.xml
<CustomField>
    <fullName>importanceFlag__c</fullName>
    <formula>IMAGE( 
CASE( importance__c , 
&quot;目立った影響はない&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;事業運営に影響がある&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;組織の利益に重大な影響がある&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;importance Flag&quot;)</formula>
    <label>重要度フラグ</label>
    <type>Text</type>
</CustomField>