force-app/main/default/objects/FunctionRequirements__c/fields/priorityFlag__c.field-meta.xml
<CustomField>
    <fullName>priorityFlag__c</fullName>
    <formula>IMAGE( 
CASE( priority__c , 
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>優先度</label>
    <type>Text</type>
</CustomField>