force-app/main/default/objects/FunctionRequirements__c/fields/requirementsCategory__c.field-meta.xml
<CustomField>
    <fullName>requirementsCategory__c</fullName>
    <label>要件カテゴリ</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RequirementsCategory</valueSetName>
    </valueSet>
</CustomField>