force-app/main/default/objects/FunctionRequirements__c/fields/requirementTarget__c.field-meta.xml
<CustomField>
    <fullName>requirementTarget__c</fullName>
    <label>要件対象</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>キャンペーン</fullName>
            </value>
            <value>
                <fullName>リード</fullName>
            </value>
            <value>
                <fullName>取引先</fullName>
            </value>
            <value>
                <fullName>取引先責任者</fullName>
            </value>
            <value>
                <fullName>商談</fullName>
            </value>
            <value>
                <fullName>予実</fullName>
            </value>
            <value>
                <fullName>活動(ToDo/行動)</fullName>
            </value>
            <value>
                <fullName>ユーザ</fullName>
            </value>
            <value>
                <fullName>レポート/ダッシュボード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>