force-app/main/default/objects/FunctionRequirements__c/fields/urgency__c.field-meta.xml
<CustomField>
    <fullName>urgency__c</fullName>
    <label>緊急度</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>業務は停止しない</fullName>
            </value>
            <value>
                <fullName>回避策のある業務停止</fullName>
            </value>
            <value>
                <fullName>重大な業務停止</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>