force-app/main/default/objects/FunctionRequirements__c/fields/urgencyFlag__c.field-meta.xml
<CustomField>
    <fullName>urgencyFlag__c</fullName>
    <formula>IMAGE( 
CASE( urgency__c , 
&quot;業務は停止しない&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;回避策のある業務停止&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;重大な業務停止&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Urgency Flag&quot;)</formula>
    <label>緊急度フラグ</label>
    <type>Text</type>
</CustomField>