force-app/main/default/objects/FunctionRequirements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>cntDevTicket__c</columns>
    <columns>priorityFlag__c</columns>
    <columns>urgencyFlag__c</columns>
    <columns>importanceFlag__c</columns>
    <columns>requirementTarget__c</columns>
    <columns>requirementsCategory__c</columns>
    <columns>departmentOfUse__c</columns>
    <columns>content__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>