force-app/main/default/objects/FunctionRequirements__c/listViews/Backlog.listView-meta.xml
<ListView>
    <fullName>Backlog</fullName>
    <booleanFilter>(1 AND 2) or (3 and 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>cntDevTicket__c</columns>
    <columns>requirementTarget__c</columns>
    <columns>priority__c</columns>
    <columns>requirementsCategory__c</columns>
    <columns>departmentOfUse__c</columns>
    <columns>content__c</columns>
    <columns>urgencyFlag__c</columns>
    <columns>importanceFlag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>notEqual</operation>
        <value>DONE</value>
    </filters>
    <filters>
        <field>status__c</field>
        <operation>notEqual</operation>
        <value>DROP</value>
    </filters>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>DONE</value>
    </filters>
    <filters>
        <field>cntDevTicket__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Backlog</label>
</ListView>